--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -51,6 +51,9 @@
                 {% endfor %}
             </div>
 
+            <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
+            https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
+
             <!-- <HINT> If user is authenticated, show course exam with a list of question -->
 
             <!-- <HINT> Each example will have many questions -->
