--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -76,7 +76,7 @@
             -->
 
             <!-- A choice submission form example
-            <form id="questionform" action="{% url 'onlinecourse:submit' course.id %}" method="post">
+            <form id="questionform" action="point to a submit view" method="post">
                         ... for each question in the course ...
                         <div class="card mt-1">
                             <div class="card-header"><h5>{{ question.question_text}}</h5></div>
