--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -54,49 +54,39 @@
             <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
             https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
 
-            <!--
-
-            A collapse example here:
+            <button data-toggle="collapse" class="btn btn-info btn-block" data-target="#exam">Start Exam</button>
+            <br>
             <div id="exam" class="collapse">
-                Click to expand elements within the collapse div
-                </div>
-
-            -->
-
-            <!-- <HINT> If user is authenticated, show course exam with a list of question -->
-
-            <!-- <HINT> Each example will have many questions -->
-
-            <!-- <HINT> Each question will have many choices -->
-
-
-            <!-- <HINT> Create a form to collect the selected choices for all questions -->
-            <!-- <HINT> For each question choice, you may create a checkbox input like
-            <input type="check" name="choice_{{choice.id}}" id="{{choice.id}}" ...>
-            -->
-
-            <!-- A choice submission form example
-            <form id="questionform" action="point to a submit view" method="post">
-                        ... for each question in the course ...
-                        <div class="card mt-1">
-                            <div class="card-header"><h5>{{ question.question_text}}</h5></div>
-                            {% csrf_token %}
+            <!-- If user is authenticated, show course exam with a list of question -->
+            {% if user.is_authenticated %}
+            <!-- Create a form to collect the selected choices for all questions -->
+            <!-- Each example will have many questions -->
+            <!-- Each question will have many choices -->
+            <!-- For each question choice, you may create a checkbox input -->
+            <!-- <input type="check" name="choice_{{choice.id}}" id="{{choice.id}}" ...> -->
+                <form id="questionform", action="{% url 'onlinecourse:submit' course.id %}" method="post">
+                    {% for question in course.question_set.all %}
+                    <div class="card mt-1">
+                        <div class="card-header"><h5>{{ question.text }}</h5></div>
+                        {% csrf_token %}
                             <div class="form-group">
-                               ... for each choice in the question ...
+                                {% for choice in question.choice_set.all %}
                                 <div class="form-check">
-                                    <label class="form-check-label">
-                                        <input type="checkbox" name="choice_{{choice.id}}"
-                                               class="form-check-input" id="{{choice.id}}"
-                                               value="{{choice.id}}">{{ choice.choice_text }}
+                                    <label class="form-check-label"></label>
+                                    <input type="checkbox" name="choice_{{choice.id}}" id="{{choice.id}}"
+                                           class="form-check-input" value="{{choice_id}}">{{ choice.text }}
                                     </label>
                                 </div>
+                                {% endfor %}
                             </div>
                         </div>
-                    <input class="btn btn-success btn-block" type="submit" value="Submit">
-            </form> -->
-
-            <!--Check here to see more details Bootstrap checkbox
-             https://www.w3schools.com/bootstrap4/bootstrap_forms_inputs.asp-->
+                    </div>
+                    {% endfor %}
+                    <br/>
+                    <input class="btn btn-success btn-block", type="submit" value="Submit">
+                </form>
+                {% endif %}
+            </div>
     </div>
 </body>
 </html>
