--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -50,6 +50,41 @@
                     </div>
                 {% endfor %}
             </div>
+
+            {% if user.is_authenticated %}
+            <br>
+            <button data-toggle="collapse" class="btn btn-info btn-block" data-target="#exam">Begin Exam</button>
+            <br>
+            <div id="exam" class="collapse">
+                <form id="questionform" action="point to a submit view" method="post">
+                    {% for question in course.question_set.all %}
+                        <div id="accordion">
+                        <div class ="card mt-1">
+                            <div class="card-header" style="cursor: pointer;" data-toggle="collapse" href="#collapsetwo"><h5>{{question.quesiton_text}}</h5></div>
+                            {% csrf_token %}
+                            <div id="collapsetwo" class="collapse" data-parent="#accordion" class="form-group">
+                            {% for choice in question.choice_set.all %}
+                            <div class="form-check">
+                                <label class="form-check-label">
+                                    <input type="check" name="choice_{{choice.id}}" class="form-check-input" id="{{choice.id}}" value="{{choice.id}}">{{ choice.choice_text }}
+                                </label>
+                            </div>
+                            {% endfor %}
+                            </div>
+                        </div>
+                        {% endfor %}
+                        </div>
+                        {% endif %}
+                    <br>
+                    <input class="btn btn-success btn-block" type="submit" value="Submit">
+                </form>
+            </div>
+            
+
+            {% if not user.is_authenticated %}
+                <div class="alert">You have not been authenticated</div>
+            {% endif %}
+            
             <!-- Task: show questions and choices -->
             <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
             https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
