--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -62,6 +62,37 @@
                 </div>
 
             -->
+            <button data-toggle="collapse" data-target="#exam"
+                 class="btn btn-info" role="button" style="width:100%">
+                Start Exam</button>
+
+            <div id="exam" class="collapse">
+                 {% if user.is_authenticated %}
+                    <form id="questionform" action="{% url 'onlinecourse:submit' course.id %}" method="post">
+                         {% for question in course.question_set.all %}
+                        <div class="card mt-1">
+                            <div class="card-header">
+                                <h5>{{question.title}}</h5>
+                            </div>
+                            {% csrf_token %}
+                            <!-- <b>{{question.text}}</b><br/> -->
+                            <div class="form-group">
+                                {% for choice in question.choice_set.all %}
+                                    <div class="form-check">
+                                        <label class="form-check-label">
+                                            <input type="checkbox" name="choice_{{choice.id}}"
+                                                class="form-check-input" id="{{choice.id}}"
+                                                value="{{choice.id}}">{{ choice.answer }}
+                                        </label>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>                        
+                        {% endfor %}
+                         <input class="btn btn-success btn-block" type="submit" value="Submit">
+                    </form>       
+                 {% endif %}
+            </div>
 
             <!-- <HINT> If user is authenticated, show course exam with a list of question -->
 
