--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -49,7 +49,7 @@
                     <div class="card-body">{{lesson.content}}</div>
                 </div>
             {% endfor %}
-        </div>
+        </div>python
         <!-- Task: show questions and choices -->
         <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
         https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
