--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -39,16 +39,37 @@
     {% if grade > 80 %}
     <div class="alert alert-success">
        <!--HINT Display passed info -->
+       <b>Congratulations, {{ user.first_name }}</b>! You have passed the exam and completed the course with score {{ exame_score }}</b>
     </div>
         {% else %}
         <div class="alert alert-danger">
             <!--HINT Display failed info -->
+            <b>Failed.</b> Sorry, {{ user.first_name }}. You have failed the exam with score {{ exam_score }}/100
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
         {% endif %}
         <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
+            {% for question in course.question_set.all %}
+            <div class="card mt-1">
+                <div class="card-header"><h5>{{ question.question_text }}</h5></div>
+                <div class="form-group">
+                    {% if choice.is_correct and choice in choices %}
+                    <div class="form-check">
+                        
+                        <div class="text-success">Correct answer: {{ choice: choice_text }}</div>
+                        {% else %}{% if choice.is_correct and not choice in choices %}
+                        <div class="text-warning">Not selected: {{ choice: choice_text }}</div>
+                        {% else %}{% if choice.is_correct and not choice in choices %}
+                        <div class="text-danger">Wonrg answer: {{ choice: choice_text }}</div>
+                        {% else %}
+                        <div>{{ choice.choice_text }}</div>
+                        {% endif %}{% endif %}{% endif %}
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+            {% endfor %}
         </div>
     </div>
 </body>
