--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -36,15 +36,15 @@
 </nav>
 
 <div class="container-fluid">
-    {% if grade > 80 %}
+    {% if question_grade > 80 %}
     <div class="alert alert-success">
        <!--HINT Display passed info -->
-       <b>Congratulations, {{ user.first_name }}</b>! You have passed the exam and completed the course with score {{ exame_score }}</b>
+       <b>Congratulations, {{ user.first_name }}</b>! You have passed the exam and completed the course with score {{ question_grade }}</b>
     </div>
         {% else %}
         <div class="alert alert-danger">
             <!--HINT Display failed info -->
-            <b>Failed.</b> Sorry, {{ user.first_name }}. You have failed the exam with score {{ exam_score }}/100
+            <b>Failed.</b> Sorry, {{ user.first_name }}. You have failed the exam with score {{ question_grade }}/100
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
         {% endif %}
@@ -54,18 +54,17 @@
             <div class="card mt-1">
                 <div class="card-header"><h5>{{ question.question_text }}</h5></div>
                 <div class="form-group">
-                    {% for question in course.question_set.all %}
-                    {% if choice.is_correct and choice in choices %}
+                    {% for choice in question.choice_set.all %}
                     <div class="form-check">
-                        
+                        {% if choice.is_correct and choice in choices %}
                         <div class="text-success">Correct answer: {{ choice.choice_text }}</div>
-                        {% else %}{% if choice.is_correct and not choice in choices %}
+                        {% elif choice.is_correct and not choice in choices %}
                         <div class="text-warning">Not selected: {{ choice.choice_text }}</div>
-                        {% else %}{% if not choice.is_correct and choice in choices %}
+                        {% elif not choice.is_correct and choice in choices %}
                         <div class="text-danger">Wonrg answer: {{ choice.choice_text }}</div>
                         {% else %}
                         <div>{{ choice.choice_text }}</div>
-                        {% endif %}{% endif %}{% endif %}
+                        {% endif %}
                     </div>
                     {% endfor %}
                 </div>
