--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -28,7 +28,7 @@
                         {% csrf_token %}
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Username" name="username" >
-                            <input type="password" class="form-control" placeholder="Username" name="psw" >
+                            <input type="password" class="form-control" placeholder="Password" name="psw" >
                             <button class="btn btn-primary" type="submit">Login</button>
                             <a class="btn btn-link" href="{% url 'onlinecourse:registration' %}">Sign Up</a>
                         </div>
@@ -41,34 +41,31 @@
 
     <!-- Page content -->
     <div class="container-fluid">
-            <h2>{{ course.name }}</h2>
-            <div class="card-columns-vertical">
-                {% for lesson in course.lesson_set.all %}
-                    <div class="card mt-1">
-                        <div class="card-header"><h5>Lesson {{lesson.order|add:1}}: {{lesson.title}}</h5></div>
-                        <div class="card-body">{{lesson.content}}</div>
-                    </div>
-                {% endfor %}
-            </div>
+        <h2>{{ course.name }}</h2>
+        <div class="card-columns-vertical">
+            {% for lesson in course.lesson_set.all %}
+                 <div class="card mt-1">
+                    <div class="card-header"><h5>Lesson {{lesson.order|add:1}}: {{lesson.title}}</h5></div>
+                    <div class="card-body">{{lesson.content}}</div>
+                </div>
+            {% endfor %}
+        </div>
             <!-- Task: show questions and choices -->
             <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
             https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
-            <br>
-            <center><button data-toggle="collapse" data-target="#exam">Examination</button></center>
-            <br>
-            <div id="exam" class="collapse">
-                {% if user.is_authenticated %}
+        <br>
+        <center><button data-toggle="collapse" data-target="#exam">Examination</button></center>
+        <br>
+        <div id="exam" class="collapse">
+            {% if user.is_authenticated %}
             <!-- <HINT> If user is authenticated, show course exam with a list of question -->
             <!-- <HINT> Each example will have many questions -->
             <!-- <HINT> Each question will have many choices -->
-
-
             <!-- <HINT> Create a form to collect the selected choices for all questions -->
             <!-- <HINT> For each question choice, you may create a checkbox input like
             <input type="check" name="choice_{{choice.id}}" id="{{choice.id}}" ...>
             -->
-
-            <!-- A choice submission form example
+            <!-- A choice submission form example-->
             <form id="questionform" action="submit/" method="post">
                 <!--... for each question in the course ...-->
                 {% for lesson in course.lesson_set.all %}
@@ -96,8 +93,8 @@
                 <br><br><br>
             </form> 
             <!--Check here to see more details Bootstrap checkbox
-             https://www.w3schools.com/bootstrap4/bootstrap_forms_inputs.asp-->
-             {% else %}
+            https://www.w3schools.com/bootstrap4/bootstrap_forms_inputs.asp-->
+            {% else %}
                 <li>
                     <form class="form-inline" action="{% url 'onlinecourse:login' %}" method="post">
                         {% csrf_token %}
@@ -111,9 +108,6 @@
                 </li>
             {% endif %}
         </div>
-    </div>
-</body>
-</html>
     </div>
 </body>
 </html>
