--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -50,39 +50,20 @@
                     </div>
                 {% endfor %}
             </div>
-            <!-- Task: show questions and choices -->
-            <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
-            https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
 
-            <!--
+            {% if user.is_authenticated %}
 
-            A collapse example here:
+            <button data-toggle="collapse" class="btn btn-info btn-block" data-target="#exam">Start Exam</button>
+            <br>
             <div id="exam" class="collapse">
-                Click to expand elements within the collapse div
-                </div>
-
-            -->
-
-            <!-- <HINT> If user is authenticated, show course exam with a list of question -->
-
-            <!-- <HINT> Each example will have many questions -->
-
-            <!-- <HINT> Each question will have many choices -->
-
-
-            <!-- <HINT> Create a form to collect the selected choices for all questions -->
-            <!-- <HINT> For each question choice, you may create a checkbox input like
-            <input type="check" name="choice_{{choice.id}}" id="{{choice.id}}" ...>
-            -->
-
-            <!-- A choice submission form example
-            <form id="questionform" action="point to a submit view" method="post">
-                        ... for each question in the course ...
-                        <div class="card mt-1">
-                            <div class="card-header"><h5>{{ question.question_text}}</h5></div>
+            <form id="questionform" action="" method="post">
+                 {% for question in course.question_set.all %}
+                       <div id="accordion">
+                       <div class="card mt-1">
+                            <div class="card-header" style="cursor: pointer;" data-toggle="collapse" href="#collapseTwo"><h5>{{ question.question_text}}</h5></div>
                             {% csrf_token %}
-                            <div class="form-group">
-                               ... for each choice in the question ...
+                            <div id="collapseTwo" class="collapse" data-parent="#accordion" class="form-group">
+                                {% for choice in question.choice_set.all %}
                                 <div class="form-check">
                                     <label class="form-check-label">
                                         <input type="checkbox" name="choice_{{choice.id}}"
@@ -90,10 +71,17 @@
                                                value="{{choice.id}}">{{ choice.choice_text }}
                                     </label>
                                 </div>
+                                {% endfor %}
                             </div>
                         </div>
+                        </div>
+                        {% endfor %}
+                    <br>
                     <input class="btn btn-success btn-block" type="submit" value="Submit">
-            </form> -->
+            </form>
+            </div>
+            {% endif %}
+
 
             <!--Check here to see more details Bootstrap checkbox
              https://www.w3schools.com/bootstrap4/bootstrap_forms_inputs.asp-->
