Fully Updated Code

--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -50,53 +50,55 @@
                     </div>
                 {% endfor %}
             </div>
-            <!-- Task: show questions and choices -->
-            <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
-            https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
+            {% extends 'onlinecourse/base.html' %}
 
-            <!--
-
-            A collapse example here:
-            <div id="exam" class="collapse">
-                Click to expand elements within the collapse div
+{% block content %}
+    <div class="container-fluid">
+        <h2>{{ course.name }}</h2>
+        <div class="card-columns-vertical">
+            {% for lesson in lessons %}
+                <div class="card mt-1">
+                    <div class="card-header"><h5>Lesson {{lesson.order|add:1}}: {{lesson.title}}</h5></div>
+                    <div class="card-body">{{lesson.content}}</div>
                 </div>
+            {% endfor %}
+        </div>
 
-            -->
+        <div class="mt-3">
+            {% if user.is_authenticated %}
+                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#exam">
+                    Start Exam
+                </button>
+            {% endif %}
+        </div>
 
-            <!-- <HINT> If user is authenticated, show course exam with a list of question -->
-
-            <!-- <HINT> Each example will have many questions -->
-
-            <!-- <HINT> Each question will have many choices -->
-
-
-            <!-- <HINT> Create a form to collect the selected choices for all questions -->
-            <!-- <HINT> For each question choice, you may create a checkbox input like
-            <input type="check" name="choice_{{choice.id}}" id="{{choice.id}}" ...>
-            -->
-
-            <!-- A choice submission form example
-            <form id="questionform" action="point to a submit view" method="post">
-                        ... for each question in the course ...
-                        <div class="card mt-1">
-                            <div class="card-header"><h5>{{ question.question_text}}</h5></div>
-                            {% csrf_token %}
-                            <div class="form-group">
-                               ... for each choice in the question ...
-                                <div class="form-check">
-                                    <label class="form-check-label">
-                                        <input type="checkbox" name="choice_{{choice.id}}"
-                                               class="form-check-input" id="{{choice.id}}"
-                                               value="{{choice.id}}">{{ choice.choice_text }}
-                                    </label>
-                                </div>
-                            </div>
+        <div id="exam" class="collapse">
+            <form id="questionform" action="{% url 'onlinecourse:submit_exam' course.id %}" method="post">
+                {% csrf_token %}
+                {% for question in questions %}
+                    <div class="card mt-1">
+                        <div class="card-header"><h5>{{ question.question_text }}</h5></div>
+                        <div class="form-group card-body">
+                            {% for choice in choices %}
+                                {% if choice.question == question %}
+                                    <div class="form-check">
+                                        <label class="form-check-label">
+                                            <input type="checkbox" name="choice_{{ choice.id }}"
+                                                   class="form-check-input" id="{{ choice.id }}"
+                                                   value="{{ choice.id }}">{{ choice.choice_text }}
+                                        </label>
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
                         </div>
-                    <input class="btn btn-success btn-block" type="submit" value="Submit">
-            </form> -->
+                    </div>
+                {% endfor %}
+                <input class="btn btn-success btn-block" type="submit" value="Submit">
+            </form>
+        </div>
+    </div>
+{% endblock %}
 
-            <!--Check here to see more details Bootstrap checkbox
-             https://www.w3schools.com/bootstrap4/bootstrap_forms_inputs.asp-->
     </div>
 </body>
 </html>
