changes made from theia lab environment

--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -54,28 +54,69 @@
             <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
             https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
 
-            <!--
+            <a href="#demo" class="btn btn-primary" data-toggle="collapse">Exam Content</a>
+            <form id="questionform" action="{% url 'onlinecourse:submit' %}" method="post">
+                        This just a test?<br/>
+                        <input type="checkbox">Test<br/>
+                        <input type="checkbox">Test<br/>
+                        <input type="checkbox">Test<br/>
+                        This just a test?<br/>
+                        <input type="checkbox">Test<br/>
+                        <input type="checkbox">Test<br/>
+                        <input type="checkbox">Test<br/>
+                        This just a test?<br/>
+                        <input type="checkbox">Test<br/>
+                        <input type="checkbox">Test<br/>
+                        <input type="checkbox">Test<br/>
+                        This just a test?<br/>
+                        <input type="checkbox">Test<br/>
+                        <input type="checkbox">Test<br/>
+                        <input type="checkbox">Test<br/>
+                        This just a test?<br/>
+                        <input type="checkbox">Test<br/>
+                        <input type="checkbox">Test<br/>
+                        <input type="checkbox">Test<br/>
+                        <div class="card mt-1">
+                            <div class="card-header"><h5>{{ question.question_text}}</h5></div>
+                            {% csrf_token %}
+                            <div class="form-group">
+
+                                <div class="form-check">
+                                    <label class="form-check-label">
+                                        <input type="checkbox" name="choice_{{choice.id}}"
+                                               class="form-check-input" id="{{choice.id}}"
+                                               value="{{choice.id}}">{{ choice.choice_text }}
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    <input class="btn btn-success btn-block" type="submit" value="Submit">
+            </form>
+            <div id="exam" class="collapse">
+                    {% if user.is_authenticated %}
+                    <li>
+                        <a class="btn btn-link" href="{% url 'onlinecourse:logout' %}">Logout</a>
+                    </li>
+                    {% else %}
+                    <li>
+                    <a class="btn btn-link" href="{% url 'onlinecourse:registration' %}">Sign Up</a>
+                            </div>
+                        </form>
+                    </li>
+                    {% endif %}
+                <input type="text" name="question_{{question_id}}" id="{{question_id}}" ...>
+                <input type="check" name="choice_{{choice.id}}" id="{{choice.id}}" ...>
+            </div>
 
             A collapse example here:
             <div id="exam" class="collapse">
                 Click to expand elements within the collapse div
                 </div>
 
-            -->
-
-            <!-- <HINT> If user is authenticated, show course exam with a list of question -->
-
-            <!-- <HINT> Each example will have many questions -->
-
-            <!-- <HINT> Each question will have many choices -->
-
-
-            <!-- <HINT> Create a form to collect the selected choices for all questions -->
-            <!-- <HINT> For each question choice, you may create a checkbox input like
             <input type="check" name="choice_{{choice.id}}" id="{{choice.id}}" ...>
-            -->
+            
 
-            <!-- A choice submission form example
+            A choice submission form example
             <form id="questionform" action="point to a submit view" method="post">
                         ... for each question in the course ...
                         <div class="card mt-1">
@@ -93,7 +134,7 @@
                             </div>
                         </div>
                     <input class="btn btn-success btn-block" type="submit" value="Submit">
-            </form> -->
+            </form>
 
             <!--Check here to see more details Bootstrap checkbox
              https://www.w3schools.com/bootstrap4/bootstrap_forms_inputs.asp-->
