--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -50,6 +50,32 @@
                     </div>
                 {% endfor %}
             </div>
+
+
+            <button type="button" class="btn btn-primary" data-toggle="collapse" data_target="#exam">START EXAM</button>
+
+            <div id="exam" class="collapse">
+                <div class="container-fluid">
+                <form id="questionform" action="{% url 'onlinecourse:submit' course.id %}" method="post">
+                    {% for question in course.question_set.all %}
+                    <div class="card mt-1">
+                        <div class="card-header"><h5>{{ question.question_text}}</h5></div>
+                        {% csrf_token %}
+                        <div class="form-group">
+                            {% for choice in question.choice_set.all %}
+                            <div class="form-check">
+                                <label class="form-check-label">
+                                    <input type="checkbox" name="choice_{{choice.id}}"
+                                           class="form-check-input" id="{{choice.id}}"
+                                           value="{{choice.id}}">{{ choice.choice_text }}
+                                </label>
+                            </div> {% endfor%}
+                        </div>
+                    </div> {% endfor%}
+                <input class="btn btn-success btn-block" type="submit" value="Submit">
+                </form>
+                </div>
+            </div>
             <!-- Task: show questions and choices -->
             <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
             https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
@@ -83,15 +109,16 @@
                             {% csrf_token %}
                             <div class="form-group">
                                ... for each choice in the question ...
-                                <div class="form-check">
+                               {% for choice in question.choice_set.all %} 
+                               <div class="form-check">
                                     <label class="form-check-label">
                                         <input type="checkbox" name="choice_{{choice.id}}"
                                                class="form-check-input" id="{{choice.id}}"
                                                value="{{choice.id}}">{{ choice.choice_text }}
                                     </label>
-                                </div>
+                                </div> {% endfor %}
                             </div>
-                        </div>
+                        </div> {% endfor %}
                     <input class="btn btn-success btn-block" type="submit" value="Submit">
             </form> -->
 
