--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -39,16 +39,41 @@
     {% if grade > 80 %}
     <div class="alert alert-success">
        <!--HINT Display passed info -->
+       CONGRATULATIONS {{ user.username }} !! You have passed the exam with score of {{ grade }}/{{total}}
     </div>
         {% else %}
         <div class="alert alert-danger">
             <!--HINT Display failed info -->
+            FAILED: Sorry {{ user.username }}! You have failed the exam with score of {{ grade }}/{{total}}
+            <p> HIT RETRY</p>
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
         {% endif %}
         <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
             <!--HINT Display exam results-->
+            {%for question in course.question_set.all%}
+            {% if choice.is_correct and choice in choices %}
+                <div class="text-success">Correct answer: {{ choice.choice_text }}</div>
+                {% else %}{%endif%}
+                {% if choice.is_correct and not choice in choices %}
+                <div class="text-warning">Correct answer: {{ choice.choice_text }}</div>
+                {% else %}{%endif%}
+                {% if not choice.is_correct and choice in choices %}
+                <div class="text-danger">You got this wrong : {{ choice.choice_text }}</div>
+                {% else %}
+                {%endif%}
+            {%endfor%}
+
+        </div>
+
+
+
+        {%endfor%}
+        <!--{{course}}
+        {{grade}}
+        {{choices}}
+        -->
         </div>
     </div>
 </body>
