--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -38,17 +38,34 @@
 <div class="container-fluid">
     {% if grade > 80 %}
     <div class="alert alert-success">
-       <!--HINT Display passed info -->
+        <b>Congratulations, {{ user.first_name }}!</b> You have passed the exam and completed the course with score {{ grade }} / {{ total_grade }}
     </div>
         {% else %}
         <div class="alert alert-danger">
-            <!--HINT Display failed info -->
+            <b>Failed</b> Sorry, {{ user.first_name }}! You have failed exam with score {{ grade }} / {{ total_grade }}
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
         {% endif %}
         <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
+        {% for question in course.question_set.all %}
+        <div class="card mt-1">
+            <div class="card-header"><h5>{{ question.text }}</h5></div>
+            <div class="card-body">
+                {% for choice in question.choice_set.all %}
+                    {% if choice.is_correct and choice in selected_choices %}
+                    <p class="card-text" style="color: green">Correct answer: {{choice.c_text}}</p>
+                    {% elif choice.is_correct and choice not in selected_choices %}
+                    <p class="card-text" style="color: yellow">Not selected: {{choice.c_text}}</p>
+                    {% elif choice.is_correct == False and choice in selected_choices %}
+                    <p class="card-text" style="color: red">Wrong answer: {{choice.c_text}}</p>
+                    {% else %}
+                    <p class="card-text" style="color: black">{{choice.c_text}}</p>
+                    {% endif %}
+                {% endfor %}
+            </div>
+        </div>
+        {% endfor %}
         </div>
     </div>
 </body>
